--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
-  "name": "t2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
+  "name": "backyourstack",
+  "version": "1.1.0",
   "funding": {
     "type": "opencollective",
-    "url": "https://opencollective.com/<YOUR-COLLECTIVE-SLUG>"
+    "url": "https://opencollective.com/backyourstack"
   }
 }
