--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backyourstack",
   "version": "1.1.0",
-  "funding": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/backyourstack"
+  "jest": {
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   }
 }
