--- a/package.json
+++ b/package.json
@@ -5,8 +5,5 @@
             "coverageDirectory": "./coverage/",
             "collectCoverage": true
       },
-      "funding": {
-            "type": "opencollective",
-            "url": "https://opencollective.com/<YOUR-COLLECTIVE-SLUG>"
-      }
+      "private": true
 }
